<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.MainActivity2">

<include android:id="@+id/miActionBar"
    layout="@layout/actionbar"
    ></include>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/cvPerfilBio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margenVertical"
    card_view:cardCornerRadius="@dimen/cornerRadioCardview"
    android:background="@color/fondoBio"
    android:layout_below="@id/miActionBar">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imgPerfilBio"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tamañoImagen"
            android:src="@drawable/perfil2"
            android:layout_gravity="center_horizontal"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/separacionlarga"
            >
            <TextView
                android:id="@+id/tvBioIntroNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introNomBio"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/separacionlarga"
                android:textSize="@dimen/introBio"
                />

            <TextView
                android:id="@+id/tvBioNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreBio"
                android:layout_marginTop="@dimen/separacionlarga"
                android:textSize="@dimen/datoBio"
                android:layout_marginLeft="@dimen/separacioncorta"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/separacionlarga"
            >
            <TextView
                android:id="@+id/tvBioIntroNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introNacBio"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/introBio"
                />

            <TextView
                android:id="@+id/tvBioNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nacBio"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/datoBio"
                android:layout_marginLeft="@dimen/separacioncorta"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/separacionlarga"
            >
            <TextView
                android:id="@+id/tvBioIntroEsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introEspBio"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/introBio"
                />

            <TextView
                android:id="@+id/tvBioEsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/espBio"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/datoBio"
                android:layout_marginLeft="@dimen/separacioncorta"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/separacionlarga"
            >
            <TextView
                android:id="@+id/tvBioIntroEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introEmailBio"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/introBio"
                />

            <TextView
                android:id="@+id/tvBioEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emailBio"
                android:layout_marginTop="@dimen/separacioncorta"
                android:textSize="@dimen/datoBio"
                android:layout_marginLeft="@dimen/separacioncorta"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>
</RelativeLayout>